--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>xyz.jzab</groupId>
     <artifactId>ab-dynamic-thread-pool</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>dynamic-thread-pool-spring-boot-starter</module>
+        <module>dynamic-thread-pool-test</module>
     </modules>
 
     <properties>
@@ -56,7 +57,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.1</version>
+                <version>4.13.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
